--- a/package.json
+++ b/package.json
@@ -5,21 +5,37 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./dist/server.js"
+    "start": "nodemon ./dist/index.js"
   },
   "author": "ihor",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.11.11",
     "@types/pg": "^8.6.5",
     "@types/uuid": "^8.3.4",
-    "nodemon": "^2.0.20"
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "eslint": "^8.29.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.1",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1"
   },
   "dependencies": {
     "aws-sdk": "^2.1253.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "drizzle-orm": "^0.12.0-beta.23",
+    "drizzle-orm-pg": "^0.12.0-beta.39",
     "express": "^4.18.2",
     "jimp": "^0.16.2",
     "joi": "^17.7.0",
