prefinal version without lambdas

--- a/example.env
+++ b/example.env
@@ -10,8 +10,14 @@ JWT_EXPIRES_IN
 AWS_ACCESS_KEY_ID
 AWS_SECRET_ACCESS_KEY
 AWS_REGION
-BUCKET_NAME_S3
 TELEGRAM_BOT_TOKEN
 DEV_URL
 STRIPE_SECRET
 CHAT_ID_TG_BOT
+BUCKET_PHOTOS
+BUCKET_SELFIES
+BUCKET_SELFIES_MINIATURE
+BUCKET_PHOTOS_WATERMARKED
+BUCKET_PHOTOS_MINIATURE
+BUCKET_PHOTOS_MINIATURE_WATERMARKED
+BUCKET_COVERS
