--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "ihor",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.109",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.11",
     "@types/pg": "^8.6.5",
+    "@types/sharp": "^0.31.1",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
@@ -27,10 +29,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
+    "serverless-plugin-typescript": "^2.1.4",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.245.0",
+    "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1253.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -41,6 +46,7 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
+    "sharp": "^0.31.3",
     "stripe": "^11.1.0",
     "telegraf": "^4.10.0",
     "uuid": "^9.0.0"
