--- a/example.env
+++ b/example.env
@@ -16,8 +16,8 @@ STRIPE_SECRET
 CHAT_ID_TG_BOT
 BUCKET_PHOTOS
 BUCKET_SELFIES
-BUCKET_SELFIES_MINIATURE
 BUCKET_PHOTOS_WATERMARKED
 BUCKET_PHOTOS_MINIATURE
 BUCKET_PHOTOS_MINIATURE_WATERMARKED
 BUCKET_COVERS
+STRIPE_PRICE_ID
