--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/aws-lambda": "^8.10.109",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/heic-convert": "^1.2.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.11",
     "@types/pg": "^8.6.5",
@@ -42,6 +43,7 @@
     "drizzle-orm": "^0.12.0-beta.23",
     "drizzle-orm-pg": "^0.12.0-beta.39",
     "express": "^4.18.2",
+    "heic-convert": "^1.2.4",
     "jimp": "^0.16.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
